syntax = "proto3";

option go_package = "github.com/anirudhsudhir/grpc-chat-app/grpc-api";

service ChatServer {
  rpc RegisterClient (RegisterRequest) returns (RegisterResponse) {}
  rpc BroadcastMessage (BroadcastRequest) returns (BroadcastResponse) {}
}

message RegisterRequest {
  string username = 1;
  string clientAddr = 2;
}

message RegisterResponse {
  bool registered = 1;
}

message BroadcastRequest {
  string text = 1;
  string username = 2;
}

message BroadcastResponse {
  bool requestReceived = 1;
}

service ChatClient {
  rpc SendMessage (SendRequest) returns (SendResponse) {}
}

message SendRequest {
  string text = 1;
  string username = 2;
}

message SendResponse {
  bool requestReceived = 1;
}
